# SerialRUN

./: .gitignore  CLAUDE.md  CLAUDE_CN.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md
benches/: serial_benchmarks.rs
crates/serialrun-cli/: Cargo.toml
crates/serialrun-cli/src/: main.rs
crates/serialrun-core/src/: lib.rs  port.rs  tcp.rs
crates/serialrun-core/src/protocol/: iec104.rs  mod.rs  modbus_bridge.rs  modbus_simulator.rs  modbus_tcp.rs
crates/serialrun-gui/: Cargo.toml
crates/serialrun-gui/src/: app.rs  async_utils.rs  main.rs  mcp_server.rs  port_owner.rs  state.rs  theme.rs
crates/serialrun-gui/src/ui/: bridge.rs  can_analyzer.rs  charts.rs  checksum.rs  connection.rs  data_logger.rs  file_transfer.rs  flasher.rs  frame_builder.rs  help.rs  i2c_spi.rs  log_viewer.rs  mod.rs  modbus.rs  plc.rs  plugin.rs  register_editor.rs  serial_scope.rs  settings.rs  simulator.rs  status.rs  terminal.rs
crates/serialrun-mcp/src/: main.rs
crates/serialtap-cli/: Cargo.toml
crates/serialtap-cli/src/: main.rs
crates/serialtap-core/: Cargo.toml
crates/serialtap-core/src/: baud_detect.rs  checksum.rs  config.rs  data_logger.rs  file_transfer.rs  lib.rs  plugin.rs  port.rs  recorder.rs
crates/serialtap-core/src/protocol/: can.rs  custom.rs  flasher.rs  i2c_spi.rs  mod.rs  modbus.rs  modbus_master.rs  serial_scope.rs
crates/serialtap-gui/: Cargo.toml  Info.plist
crates/serialtap-gui/src/: app.rs  async_utils.rs  icon.rs  main.rs  mcp_server.rs  plc_presets.rs  state.rs
crates/serialtap-gui/src/ui/: can_analyzer.rs  charts.rs  checksum.rs  connection.rs  data_logger.rs  file_transfer.rs  flasher.rs  frame_builder.rs  help.rs  i2c_spi.rs  log_viewer.rs  mod.rs  modbus.rs  plc.rs  plugin.rs  register_editor.rs  serial_scope.rs  settings.rs  status.rs  terminal.rs
crates/serialtap-mcp/: Cargo.toml
crates/serialtap-mcp/src/: main.rs
crates/serialtap-plugin-api/: Cargo.toml
crates/serialtap-plugin-api/src/: lib.rs
docs/: BUILD_CN.md  DEPLOY_WEB.md  MANUAL.md  MANUAL_CN.md  MCP_API.md  QUALITY_REPORT.md  SKILL.md  SKILL_CN.md  help_en.md  help_zh.md
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
scripts/: gen_icon.py
tests/: cli_tests.rs  protocol_tests.rs  serial_tests.rs
