[package]
name = "serialrun-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for SerialRUN serial port assistant"
license = "MIT"

[[bin]]
name = "serialrun"
path = "src/main.rs"

[dependencies]
serialrun-core = { path = "../serialrun-core" }
serialrun-plugin-api = { path = "../serialrun-plugin-api" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
arboard = { workspace = true }
png = { workspace = true }
chrono = { workspace = true }
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
