[package]
name = "serialtap-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for SerialTap serial port assistant"
license = "MIT"

[[bin]]
name = "serialtap"
path = "src/main.rs"

[dependencies]
serialtap-core = { path = "../serialtap-core" }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
