[package]
name = "serialtap-core"
version = "0.1.0"
edition = "2021"
description = "Core library for SerialTap serial port assistant"
license = "MIT"

[dependencies]
serialport = { workspace = true }
tokio = { workspace = true }
tokio-serial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serialtap-plugin-api = { path = "../serialtap-plugin-api" }
libloading = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
