[package]
name = "serialtap-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for SerialTap serial port assistant"
license = "MIT"

[[bin]]
name = "serialtap-gui"
path = "src/main.rs"

[dependencies]
serialtap-core = { path = "../serialtap-core" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
chrono = { workspace = true }
