[package]
name = "serialtap-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for SerialTap serial port assistant"
license = "MIT"

[[bin]]
name = "serialtap-mcp"
path = "src/main.rs"

[dependencies]
serialtap-core = { path = "../serialtap-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
